tests/fixtures/errors/duplicate.ksr
// Duplicate name: x is declared twice
param x: Dimensionless = 1.0;
param x: Dimensionless = 2.0;
